<resources>
    <string name="app_name">KUTTS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="st_documents">Документы</string>
    <string name="st_admission">Поступление</string>
    <string name="st_title_about_app">О приложении</string>
    <string name="st_about_app_and_phone_info">Информация о приложении и устройстве</string>
    <string name="st_format_application_version">Application version: %s</string>
    <string name="st_format_os_version">OS Version: %s</string>
    <string name="st_format_device_id">deviceId: %s</string>
    <string name="st_format_device_name">Device: %s</string>
    <string name="st_copy">Скопировать</string>
    <string name="st_back">back</string>
    <string name="st_terms_of_use">Пользовательское соглашение</string>
    <string name="st_title_legal_information">Правовая информация</string>
    <string name="st_terms_of_use_description">Настоящее Пользовательское соглашение (далее - \"Соглашение\") является официальным документом, регулирующим порядок использования приложения (далее - \"Приложение\") и устанавливающим права и обязанности пользователей (далее - \"Пользователь\") и разработчика Приложения.</string>
    <string name="st_title_general_provisions">1. Общие положения</string>
    <string name="st_general_provisions11">1.1. Приложение предназначено исключительно для информационных целей и не предполагает сбора или использования каких-либо личных данных пользователей. Вся информация, содержащаяся в Приложении, получена из общедоступных источников, включая официальный сайт учебной организации.</string>
    <string name="st_general_provisions12">1.2. Использование Приложения подразумевает полное согласие Пользователя с условиями настоящего Соглашения. Разработчик Приложения не несет ответственности за какой-либо ущерб, возникший в результате использования данного Приложения.</string>
    <string name="st_general_provisions13">1.3. Приложение может включать ссылки на сторонние сайты и ресурсы. Разработчик Приложения не несет ответственности за содержание и политику конфиденциальности этих сайтов и ресурсов.</string>
    <string name="st_title_rights_and_duties">2. Права и обязанности</string>
    <string name="st_rights_and_duties21">2.1. Разработчик Приложения обязуется предоставить Пользователю возможность пользоваться Приложением в соответствии с его функциональными возможностями.</string>
    <string name="st_rights_and_duties22">2.2. Пользователь обязуется использовать Приложение только в соответствии с его назначением и требованиями настоящего Соглашения.</string>
    <string name="st_rights_and_duties23">2.3. Пользователь обязуется не использовать Приложение для совершения противоправных действий.</string>
    <string name="st_rights_and_duties24">2.4. Пользователь обязуется не нарушать права интеллектуальной собственности разработчика Приложения и не использовать Приложение в коммерческих целях.</string>
    <string name="st_rights_and_duties25">2.5. Разработчик Приложения вправе ограничить доступ Пользователя к Приложению в случае нарушения Пользователем условий настоящего Соглашения.</string>
    <string name="st_title_changes_of_the_agreement">3. Изменение и прекращение Соглашения</string>
    <string name="st_changes_of_the_agreement31">3.1. Настоящее Соглашение может быть изменено разработчиком Приложения без предварительного уведомления Пользователя.</string>
    <string name="st_changes_of_the_agreement32">3.2. Продолжение использования Приложения после внесения изменений в настоящее Соглашение подразумевает полное согласие Пользователя с новыми</string>
    <string name="st_accept">Принять</string>
    <string name="st_decline">Отказаться</string>
    <string name="st_copied">Скопировано</string>
    <string name="st_title_kutts">Каменск-Уральский Техникум торговли и сервиса</string>
    <string name="st_kutts_address">г. Каменск-Уральский, ул. Октябрьская, д. 99</string>
    <string name="st_kutts_phone">8 (3439) 396–122</string>
    <string name="st_kutts_website">https://kutts.ru</string>
    <string name="st_kutts_email">kuttc@mail.ru</string>
    <string name="st_title_working_mode">Режим работы</string>
    <string name="st_waking_days">Понедельник–пятница: с 8–00 до 16–45</string>
    <string name="st_saturday_workin_mode">Суббота: с 8–00 до 14–00</string>
    <string name="st_sunday_workin_mode">Воскресенье: выходной</string>
    <string name="st_title_contacts">Контакты</string>
    <string name="st_title_locations">Адреса</string>
    <string name="st_format_string">%s</string>
    <string name="st_email_unset">Отсутствует</string>
    <string name="st_unknown">Неизвестно</string>
    <string name="st_error_opening_website">Не удалось открыть ссылку</string>
    <string name="st_map">Карта</string>
    <string name="st_title_admission_committee">Приемная комиссия</string>
    <string name="st_string_label">Label</string>
    <string name="st_educational_programs">Образовательные программы</string>
    <string name="st_title_entrance_tests">Вступительные испытания</string>
    <string name="st_targeted_training">Целевое обучение</string>
    <string name="st_title_monitoring">Мониторинг поданных заявлений</string>
    <string name="st_title_dormitory_info">Сведения о наличии общежития</string>
    <string name="st_title_enrollment_orders">Приказы о зачислении</string>
    <string name="st_documents_not_found">Документы не найдены</string>
    <string name="st_pic">Картинка</string>
    <string name="st_more">Подробнее</string>
    <string name="st_title_educational_programs">Образовательные программы</string>
    <string name="st_filter_opop">ОПОП</string>
    <string name="st_filter_oppo">ОППО</string>
    <string name="st_filter_all">Все</string>
    <string name="st_search">Поиск</string>
    <string name="st_seats_number_format">Количество мест: %d</string>
    <string name="st_title_filter">Фильтр</string>
    <string name="st_oppo_filter_description">Перечень основных программ професиионального обучения (адаптированных для лиц с ограниченными возможностями)</string>
    <string name="st_filter_opop_description">Перечень основных профессиональных образовательных программ</string>
    <string name="st_filter_all_description">Перечень всех образовательных программ</string>
    <string name="st_search_description">Поиск образовательных программ</string>
    <string name="st_error_to_open_map">Не удалось открыть карту</string>
    <string name="st_title_basic_education">Базовое образование:</string>
    <string name="st_title_training_period">Срок обучения:</string>
    <string name="st_title_training_form_title">Форма обучения:</string>
    <string name="st_title_seats_number_title">Количество мест:</string>
    <string name="st_title_qualification">Присваеваемая квалификация:</string>
    <string name="st_title_program_code">Код специальности:</string>
    <string name="st_query_hint">Начните искать…</string>
    <string name="st_open">Открыть</string>
    <string name="st_admission_deadlines">Подать заявление на поступление можно с 20.06.%d г. по 15.08.%d г.</string>
    <string name="st_title_admission">Поступление</string>
    <string name="st_admission_deadlines2">При наличии свободных мест прием заявлений продлевается до 25.11.%d г.</string>
    <string name="st_submit_variants">Варианты подачи заявления</string>
    <string name="st_through_personal_account">Через личный кабинет абитуриента</string>
    <string name="st_admission_committee">В приемную комиссию</string>
    <string name="st_postal_operator">Через операторов почтовой связи</string>
    <string name="st_by_email">Через E-mail</string>
    <string name="st_forms_docs">Формы заявлений</string>
    <string name="st_title_required_documents_list">Перечень необходимых документов:</string>
    <string name="st_admission_submit">Подать заявление</string>
    <string name="document_statement">Заявление на поступление от имени абитуриента</string>
    <string name="document_passport">Документ, подтверждающий личность (паспорт)</string>
    <string name="document_education">Документ об образовании - аттестат и приложение (свидетельство об обучении)</string>
    <string name="document_photo">Фотографии (3x4 см) - 4 штуки</string>
    <string name="document_snils">Копия СНИЛС</string>
    <string name="document_personal_data">Согласие на обработку персональных данных</string>
    <string name="st_icon">icon</string>
    <string name="st_applications_form">Формы заявлений</string>
    <string name="st_error">Ошибка</string>
    <string name="st_retry">Повторить попытку</string>
    <string name="st_title_documentation">Документация</string>
    <string name="st_title_targeted_training">Целевое обучение</string>
    <string name="st_temporary_unavailable_error">Временно недоступно. Повторите попытку позднее.</string>
    <string name="st_ok">Ок</string>
    <string name="st_title_description">Описание:</string>
    <string name="st_title_dormitory">Общежитие</string>
    <string name="st_location_format">%1$s, %2$s, %3$s</string>
    <string name="st_title_gallery">Галерея</string>
    <string name="st_img">img</string>
    <string name="st_show_all">Показать все</string>
    <string name="st_title_photos">Фотографии</string>
    <string name="st_images_count_format">%d из %d</string>
    <string name="st_open_gallery">Открыть галерею</string>
    <string name="st_photo_viewing">Просмотр изображений</string>
    <string name="st_network_error">Отсутствует подключение к интернету</string>

</resources>