<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="su.th2empty.kutts.view.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="su.th2empty.kutts.view.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_documents"
        android:name="su.th2empty.kutts.view.fragments.DocumentsFragment"
        android:label="@string/st_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/navigation_admission"
        android:name="su.th2empty.kutts.view.fragments.AdmissionFragment"
        android:label="@string/st_admission"
        tools:layout="@layout/fragment_admission" />
</navigation>