<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TermsOfUseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <Button
                android:id="@+id/back_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_arrow_back"
                app:iconSize="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/st_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/st_title_legal_information"
                android:textAppearance="@style/TitleLarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:padding="16dp">

            <TextView
                android:id="@+id/terms_of_use_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/st_terms_of_use"
                android:textAppearance="@style/TitleLarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <View
                android:id="@+id/sep"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/md_theme_outline_variant"
                app:layout_constraintTop_toBottomOf="@+id/terms_of_use_title"/>

            <TextView
                android:id="@+id/terms_of_use_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_terms_of_use_description"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/sep"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/title_general_provisions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/st_title_general_provisions"
                android:textAppearance="@style/TitleMedium"
                app:layout_constraintTop_toBottomOf="@id/terms_of_use_description"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/general_provisions11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_general_provisions11"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/title_general_provisions"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/general_provisions12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_general_provisions12"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/general_provisions11"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/general_provisions13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_general_provisions13"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/general_provisions12"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/title_rights_and_duties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/st_title_rights_and_duties"
                android:textAppearance="@style/TitleMedium"
                app:layout_constraintTop_toBottomOf="@id/general_provisions13"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/rights_and_duties21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_rights_and_duties21"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/title_rights_and_duties"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/rights_and_duties22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_rights_and_duties22"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/rights_and_duties21"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/rights_and_duties23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_rights_and_duties23"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/rights_and_duties22"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/rights_and_duties24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_rights_and_duties24"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/rights_and_duties23"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/rights_and_duties25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_rights_and_duties25"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/rights_and_duties24"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/title_changes_of_the_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/st_title_changes_of_the_agreement"
                android:textAppearance="@style/TitleMedium"
                app:layout_constraintTop_toBottomOf="@id/rights_and_duties25"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/changes_of_the_agreement31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_changes_of_the_agreement31"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/title_changes_of_the_agreement"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/changes_of_the_agreement32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/st_changes_of_the_agreement32"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/changes_of_the_agreement31"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>