<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/back_btn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_arrow_back"
            app:iconSize="36dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/st_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_title_about_app"
            android:textAppearance="@style/HeadlineSmall"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@drawable/bottom_container_card"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:text="@string/st_about_app_and_phone_info"
            android:textAppearance="@style/TitleMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/copy_info_btn"
            style="@style/Theme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_copy"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/application_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_format_application_version"
            android:textAppearance="@style/BodyMedium"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/os_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_format_os_version"
            android:textAppearance="@style/BodyMedium"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/application_version"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/st_format_device_name"
            android:textAppearance="@style/BodyMedium"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/os_version"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:id="@+id/sep_old"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_name"
            android:background="@color/md_theme_outline_variant"
            android:visibility="gone"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/device_name"/>

        <Button
            android:id="@+id/terms_of_use_btn"
            style="@style/Theme.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/st_terms_of_use"
            android:drawableEnd="@drawable/ic_arrow_left"
            app:layout_constraintTop_toBottomOf="@id/sep"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>